update the path for the style sheet

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<link rel="stylesheet"
 				media="screen"
-				href="style.css?v=8may2013">
+				href="style.css">
 	<link rel="alternate"
 				type="application/rss+xml"
 				title="RSS"
@@ -74,7 +74,7 @@
 				<p>A demonstration of what can be accomplished through <abbr title="Cascading Style Sheets">CSS</abbr>-based
 					design. Select any style sheet from the list to load it into this page.</p>
 				<p>Download the example <a href="/examples/index"
-						 title="This page's source HTML code, not to be modified.">html file</a> and <a href="/examples/style.css"
+						 title="This page's source HTML code, not to be modified.">html file</a> and <a href="style.css"
 						 title="This page's sample CSS, the file you may modify.">css file</a></p>
 			</div>
 
@@ -127,7 +127,7 @@
 								title="HyperText Markup Language">HTML</abbr>. This may seem daunting at first if you&#8217;ve never
 					worked this way before, but follow the listed links to learn more, and use the sample files as a guide.</p>
 				<p>Download the sample <a href="/examples/index"
-						 title="This page's source HTML code, not to be modified.">HTML</a> and <a href="/examples/style.css"
+						 title="This page's source HTML code, not to be modified.">HTML</a> and <a href="style.css"
 						 title="This page's sample CSS, the file you may modify.">CSS</a> to work on a copy locally. Once you have
 					completed your masterpiece (and please, don&#8217;t submit half-finished work) upload your <abbr
 								title="Cascading Style Sheets">CSS</abbr> file to a web server under your control. <a
@@ -143,7 +143,8 @@
 				<p>Why participate? For recognition, inspiration, and a resource we can all refer to showing people how amazing
 					<abbr title="Cascading Style Sheets">CSS</abbr> really can be. This site serves as equal parts inspiration for
 					those working on the web today, learning tool for those who will be tomorrow, and gallery of future techniques
-					we can all look forward to.</p>
+					we can all look forward to.
+				</p>
 			</div>
 
 			<div class="requirements"
