--- a/zen-garden.html
+++ b/zen-garden.html
@@ -7,7 +7,7 @@
 
 	<link rel="stylesheet"
 				media="screen"
-				href="style.css">
+				href="zen-garden-style.css">
 	<link rel="alternate"
 				type="application/rss+xml"
 				title="RSS"
@@ -74,7 +74,7 @@
 				<p>A demonstration of what can be accomplished through <abbr title="Cascading Style Sheets">CSS</abbr>-based
 					design. Select any style sheet from the list to load it into this page.</p>
 				<p>Download the example <a href="/examples/index"
-						 title="This page's source HTML code, not to be modified.">html file</a> and <a href="style.css"
+						 title="This page's source HTML code, not to be modified.">html file</a> and <a href="zen-garden-style.css"
 						 title="This page's sample CSS, the file you may modify.">css file</a></p>
 			</div>
 
@@ -127,7 +127,7 @@
 								title="HyperText Markup Language">HTML</abbr>. This may seem daunting at first if you&#8217;ve never
 					worked this way before, but follow the listed links to learn more, and use the sample files as a guide.</p>
 				<p>Download the sample <a href="/examples/index"
-						 title="This page's source HTML code, not to be modified.">HTML</a> and <a href="style.css"
+						 title="This page's source HTML code, not to be modified.">HTML</a> and <a href="zen-garden-style.css"
 						 title="This page's sample CSS, the file you may modify.">CSS</a> to work on a copy locally. Once you have
 					completed your masterpiece (and please, don&#8217;t submit half-finished work) upload your <abbr
 								title="Cascading Style Sheets">CSS</abbr> file to a web server under your control. <a
@@ -275,7 +275,7 @@
 					<h3 class="resources">Resources:</h3>
 					<ul>
 						<li class="view-css">
-							<a href="style.css"
+							<a href="zen-garden-style.css"
 								 title="View the source CSS file of the currently-viewed design.">
 								View This Design&#8217;s <abbr title="Cascading Style Sheets">CSS</abbr> </a>
 						</li>
